--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div id="page2">
-            <video src="https://drive.google.com/file/d/1Y415Z8decycYmXh-ujIt3NCTOiaT88X7/view?usp=drive_link
+            <video src="video_2025-03-13_11-18-49.mp4"
             " autoplay muted loop></video>
         </div>
 
