--- a/index.html
+++ b/index.html
@@ -38,26 +38,61 @@
             </div>
         </div>
         <div id="page2">
-            <video src="video_2025-03-13_11-18-49.mp4"
-            " autoplay muted loop></video>
+            <video src="video_2025-03-13_11-18-49.mp4" autoplay muted loop></video>
         </div>
-
 
 
         <div id="page3">
             <div class="text">
                 <div class="text-img"></div>
-                <h1>Create new feature at <br>Gravity Coding</h1>
-                <p>Subscribe our channel for latest features of awwwards website. Check out other videos <br>for
-                    learning
-                    web development with great UI design and animation based.</p>
+                <h1 data-scroll data-scroll speed="-2">OUR <br>MISSION</h1>
             </div>
             <div class="cards" id="card-one"></div>
             <div class="cards" id="card-two"></div>
             <div class="cards" id="card-three"></div>
         </div>
 
+        <div id="page4">
+            <!-- Centered heading visible initially -->
+            <div class="page4-heading">OUR VISION</div>
+            <!-- Cards container positioned off-screen to the left -->
+            <div class="page4-cards-container">
+                <div class="page4-card" style="background-image: url('ONE.png');"></div>
+                <div class="page4-card" style="background-image: url('three.png');"></div>
+                <div class="page4-card" style="background-image: url('two.png');"></div>
+                <div class="page4-card" style="background-image: url('ONE.png');"></div>
+            </div>
+        </div>
 
+        <footer>
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img src="logo-removebg-preview.png" alt="Logo">
+                    <p>Building a visual legacy</p>
+                </div>
+                <div class="footer-social">
+                    <h3>Follow Us</h3>
+                    <div class="social-icons">
+                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="#"><i class="ri-instagram-line"></i></a>
+                        <a href="#"><i class="ri-twitter-x-line"></i></a>
+                        <a href="#"><i class="ri-youtube-line"></i></a>
+                    </div>
+                </div>
+                <div class="footer-newsletter">
+                    <h3>Subscribe</h3>
+                    <form id="newsletter-form">
+                        <input type="email" id="email" placeholder="Enter your email">
+                        <button type="submit">Subscribe</button>
+                    </form>
+                    <p id="message"></p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>© 2025 IEM. All rights reserved.</p>
+            </div>
+        </footer>
+        
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
